@@ -1,3 +1,4 @@
+require('./version')
 require('./namings')
 require('./pg_meta')
 require('./schema')
