@@ -1,0 +1,9 @@
+fhirbase_version = ()-> '0.0.1-beta.12'
+
+exports.fhirbase_version = fhirbase_version
+
+exports.fhirbase_version.plv8_signature = {
+  arguments: 'json'
+  returns: 'varchar(20)'
+  immutable: true
+}
